fixed some visual bugs - modified configApi

--- a/src/components/layouts/Footer.css
+++ b/src/components/layouts/Footer.css
@@ -1,3 +1,9 @@
+#footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
 .icon-link {
   display: inline-block;
   margin-right: 1rem;
